api de calcular resultado, registrar respuesta y Swagger
